fix: legibility issues in diffs (#27)

--- a/catppuccin.user.css
+++ b/catppuccin.user.css
@@ -164,16 +164,16 @@
         --color-page-header-bg:  $base;
         --color-marketing-icon-primary: $sky;
         --color-marketing-icon-secondary: $blue;
-        --color-diff-blob-addition-num-text: #c9d1d9;
-        --color-diff-blob-addition-fg: #c9d1d9;
+        --color-diff-blob-addition-num-text: $text;
+        --color-diff-blob-addition-fg: $text;
         --color-diff-blob-addition-num-bg: alpha($green, 0.3);
         --color-diff-blob-addition-line-bg: alpha($green, 0.15);
-        --color-diff-blob-addition-word-bg: alpha($green, 0.4);
-        --color-diff-blob-deletion-num-text: #c9d1d9;
-        --color-diff-blob-deletion-fg: #c9d1d9;
+        --color-diff-blob-addition-word-bg: alpha($green, 0.3);
+        --color-diff-blob-deletion-num-text: $text;
+        --color-diff-blob-deletion-fg: $text;
         --color-diff-blob-deletion-num-bg: alpha($red, 0.3);
         --color-diff-blob-deletion-line-bg: alpha($red, 0.15);
-        --color-diff-blob-deletion-word-bg: alpha($red, 0.4);
+        --color-diff-blob-deletion-word-bg: alpha($red, 0.3);
         --color-diff-blob-hunk-num-bg: alpha($blue, 0.4);
         --color-diff-blob-expander-icon: #8b949e;
         --color-diff-blob-selected-line-highlight-mix-blend-mode: screen;
